<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="Fragments.AddExpenseFragment">

    <!-- TODO: Update blank fragment layout -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="99dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tvAddExpenseTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/Title" />

        <EditText
            android:id="@+id/etAddExpenseTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="textPersonName" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="149dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tvAddExpenseCategory"
            android:layout_width="302dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/Category" />

        <RadioGroup
            android:id="@+id/rgAddExpense"
            android:layout_width="match_parent"
            android:layout_height="114dp"
            android:layout_weight="1">

            <RadioButton
                android:id="@+id/rbAddExpenseAccommodation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/Accommodation" />

            <RadioButton
                android:id="@+id/rbAddExpenseGroceries"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/Groceries" />

            <RadioButton
                android:id="@+id/rbAddExpenseSparetime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/Sparetime" />

            <RadioButton
                android:id="@+id/rbAddExpenseTravel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/Travel" />

            <RadioButton
                android:id="@+id/rbAddExpenseOther"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/Other" />
        </RadioGroup>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tvAddExpenseDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/Date" />

        <Button
            android:id="@+id/btnAddExpenseDate"
            android:layout_width="wrap_content"
            android:layout_height="38dp"
            android:layout_weight="1"
            android:text="Button" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="87dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tvAddExpensePrice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/Price" />

        <EditText
            android:id="@+id/etAddExpensePrice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="textPersonName" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnAddExpense"
            android:layout_width="wrap_content"
            android:layout_height="58dp"
            android:layout_weight="1"
            android:text="Button" />
    </LinearLayout>

</LinearLayout>
