<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layoutAddIncomeFragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="Fragments.AddIncomeFragment">

    <!-- TODO: Update blank fragment layout -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="99dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tvAddIncomeTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/Title" />

        <EditText
            android:id="@+id/etAddIncomeTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="textPersonName" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="149dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tvAddIncomeCategory"
            android:layout_width="302dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/Category" />

        <RadioGroup
            android:id="@+id/rgAddIncome"
            android:layout_width="match_parent"
            android:layout_height="59dp"
            android:layout_weight="1">

            <RadioButton
                android:id="@+id/rbAddIncomeSalary"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/Salary" />

            <RadioButton
                android:id="@+id/rbAddIncomeOther"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/Other" />
        </RadioGroup>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tvAddIncomeDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/Date" />

        <Button
            android:id="@+id/btnAddIncomeDate"
            android:layout_width="wrap_content"
            android:layout_height="38dp"
            android:layout_weight="1"
            android:text="Button" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="87dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tvAddIncomePrice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/Price" />

        <EditText
            android:id="@+id/etAddIncomePrice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="textPersonName" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnAddIncome"
            android:layout_width="wrap_content"
            android:layout_height="58dp"
            android:layout_weight="1"
            android:text="Button" />
    </LinearLayout>
</LinearLayout>
