<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layoutExpenseTransactions"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="Fragments.ExpenseTransactionsFragment">

    <!-- TODO: Update blank fragment layout -->

    <android.support.v7.widget.RecyclerView
        android:id="@+id/rvExpenseTransactions"
        android:layout_width="match_parent"
        android:layout_height="324dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="76dp"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="190dp"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvExpenseDateFrom"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/DateFrom" />

            <Button
                android:id="@+id/btnExpenseDateFrom"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Date" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvExpenseDateTo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/DateFrom" />

            <Button
                android:id="@+id/btnExpenseDateTo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Date" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnFilterExpense"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/btnFilter" />

        <Button
            android:id="@+id/btnUnfilterExpense"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/btnUnfilter" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvTotalExpense"
            android:layout_width="match_parent"
            android:layout_height="38dp"
            android:text="TextView" />
    </LinearLayout>

</LinearLayout>
